--- a/springCloud/microservice-provider-user/pom.xml
+++ b/springCloud/microservice-provider-user/pom.xml
@@ -37,11 +37,16 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-netflix-eureka-client</artifactId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>${eureka.version}</version>
 			<scope>compile</scope>
 		</dependency>
+
 
 	</dependencies>
 
