--- a/springCloud/microservice-provider-user/src/main/resources/application.yml
+++ b/springCloud/microservice-provider-user/src/main/resources/application.yml
@@ -20,6 +20,8 @@ spring:
     initialization-mode: always
   main:
     allow-bean-definition-overriding: true
+  application:
+    name: Microservice-provider-user
 logging:
   level:
     root: INFO
@@ -27,3 +29,12 @@ logging:
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.hibernate.type.descriptor.sql.BasicExtractor: TRACE
     com.itmuch: DEBUG
+eureka:
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${server.port}}}
+  client:
+    healthcheck:
+      enabled: true
+    service-url:
+      defaultZone: http://user:123@localhost:8761/eureka
